--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -188,23 +188,18 @@ layout: default
             <!-- Comments Section (Giscus) -->
             <div class="comments-section">
                 <h3>💬 Comments</h3>
-                <!-- 
-                To enable comments, follow these steps:
-                1. Go to https://github.com/Tharunaditya/tharunaditya.github.io/settings
-                2. Enable "Discussions" in the Features section
-                3. Go to https://giscus.app
-                4. Enter your repo: Tharunaditya/tharunaditya.github.io
-                5. Copy the generated script and replace the one below
-                
-                Alternative: Use Utterances (simpler, uses Issues instead of Discussions)
-                Visit: https://utteranc.es
-                -->
-                
-                <!-- Utterances Comments (Simple Alternative) -->
-                <script src="https://utteranc.es/client.js"
-                        repo="Tharunaditya/tharunaditya.github.io"
-                        issue-term="pathname"
-                        theme="github-dark"
+                <script src="https://giscus.app/client.js"
+                        data-repo="Tharunaditya/tharunaditya.github.io"
+                        data-repo-id="MDEwOlJlcG9zaXRvcnkzODQyMTQ1MzY="
+                        data-category="Announcements"
+                        data-category-id="DIC_kwDOFuamCM4C1VwK"
+                        data-mapping="pathname"
+                        data-strict="0"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="0"
+                        data-input-position="bottom"
+                        data-theme="dark"
+                        data-lang="en"
                         crossorigin="anonymous"
                         async>
                 </script>
