--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
     {% seo %}
     
     <!-- Favicon -->
-    <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+    <link rel="icon" href="{{ '/assets/images/favicon/favicon.ico' | relative_url }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ '/assets/images/favicon/favicon.ico' | relative_url }}" type="image/x-icon">
     
     <!-- OneSignal Push Notifications -->
     <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
