--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,18 @@
     <!-- SEO Tags -->
     {% seo %}
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NMPLLTCRV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-4NMPLLTCRV', {
+            'anonymize_ip': true,
+            'cookie_flags': 'SameSite=None;Secure'
+        });
+    </script>
+    
     <!-- Favicon -->
     <link rel="icon" href="{{ '/assets/images/favicon/favicon.ico' | relative_url }}" type="image/x-icon">
     <link rel="shortcut icon" href="{{ '/assets/images/favicon/favicon.ico' | relative_url }}" type="image/x-icon">
